Fixed word wrapping on the cards

--- a/style.css
+++ b/style.css
@@ -389,6 +389,9 @@ td p{
   transform: translate(-50%, -50%);
   text-align: center;
   list-style-position: inside;
+  padding-right: 3px;
+  padding-left: 3px;
+  white-space: nowrap;
 }
 #card-text h1 {
   font-size: 20px;
